# csca-5028-final-project

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: continuous-integration.yaml
analyzer/: Dockerfile  README.md  pyproject.toml
analyzer/analyzer/: __init__.py  main.py
analyzer/resources/: bad_words.txt
analyzer/tests/: test_main.py
collector/: Dockerfile  pyproject.toml
collector/collector/: __init__.py  main.py
collector/tests/: test_main.py
images/: architecture.mermaid
infrastructure/: .gitignore  deployShared.sh  main.tf  outputs.tf  provider.tf  variables.tf
integration/: integration_tests.py
migrations/: 0001-createPostsTable.sql
rabbitmq-config/: definitions.json  rabbitmq.conf
web/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
web/tests/: test_main.py
web/web/: __init__.py  main.py
web/web/static/: main.js  style.css
web/web/templates/: home.html
