[project]
name = "collector"
version = "0.1.0"
description = "Application that collects Bluesky posts regarding Vancouver"
authors = [
    {name = "Andrés Ignacio Torres",email = "dev@aitorres.com"}
]
requires-python = ">=3.11"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pre-commit = "^4.2.0"
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.16.1"
pylint = "^3.3.7"
isort = "^6.0.1"

[tool.isort]
src_paths = ["collector", "tests"]
profile = "black"
line_length = 90

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length=90

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
